# musiclist-server

./: .env  Cargo.toml
migrations/2023-02-17-180640_wish_entry/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
