[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
wishlib = {path = '../wishlib', version = "*"}
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }
uuid = { version = "1.3.0", features = ["v4"]}